--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,13 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "css-loader": "^4.3.0",
+    "js-cookie": "^2.2.1",
     "react-bootstrap": "^1.3.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1"
   }
 }
